--- a/nginx-service.yaml
+++ b/nginx-service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: nginx-service
+  name: YOURNAME-nginx-service
   namespace: default
 spec:
   selector:
